Source/WebCore/bindings/js/JSCustomSQLStatementErrorCallback.cpp
@@ -32,6 +32,7 @@
 #include "JSSQLError.h"
 #include "JSSQLTransaction.h"
 #include "ScriptExecutionContext.h"
+#include <runtime/Exception.h>
 #include <runtime/JSLock.h>
 #include <wtf/Ref.h>
 
@@ -53,9 +54,11 @@ bool JSSQLStatementErrorCallback::handleEvent(SQLTransaction* transaction, SQLEr
     args.append(toJS(exec, m_data->globalObject(), transaction));
     args.append(toJS(exec, m_data->globalObject(), error));
 
-    bool raisedException = false;
-    JSValue result = m_data->invokeCallback(args, JSCallbackData::CallbackType::Function, Identifier(), &raisedException);
-    if (raisedException) {
+    NakedPtr<Exception> returnedException;
+    JSValue result = m_data->invokeCallback(args, JSCallbackData::CallbackType::Function, Identifier(), returnedException);
+    if (returnedException) {
+        reportException(exec, returnedException);
+
         // The spec says:
         // "If the error callback returns false, then move on to the next statement..."
         // "Otherwise, the error callback did not return false, or there was no error callback"
